--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -1,5 +1,5 @@
 # Shadow
-shadow = true;
+shadow = false;
 # no-dnd-shadow = true;
 detect-rounded-corners = true;
 shadow-radius = 5;
@@ -53,31 +53,15 @@ invert-color-include = [ ];
 glx-copy-from-front = false;
 
 opacity-rule = [
-#"99:name *?= 'Call'",
-#"99:class_g = 'Chromium'",
-#"99:name *?= 'Conky'",
-#"99:class_g = 'Darktable'",
 #"50:class_g = 'Dmenu'",
-#"99:name *?= 'Event'",
 #"99:class_g = 'Firefox'",
-#"99:class_g = 'GIMP'",
-#"99:name *?= 'Image'",
-#"99:class_g = 'Lazpaint'",
-#"99:class_g = 'Midori'",
-#"99:name *?= 'Minitube'",
-#"99:class_g = 'Mousepad'",
-#"99:name *?= 'MuseScore'",
-#"90:name *?= 'Page Info'",
-#"99:name *?= 'Pale Moon'",
-#"90:name *?= 'Panel'",
-#"99:class_g = 'Pinta'",
-#"90:name *?= 'Restart'",
-#"99:name *?= 'sudo'",
 "95:name *?= 'emacs'",
 #"99:class_g = 'Viewnior'",
 #"95:class_g = 'VirtualBox'",
 "93:name *?= 'Konsole'",
 "93:name *?= 'wxMaxima'",
+"75:class_g = 'lemonbar'",
+"75:class_g = 'Bar'",
 #"99:name *?= 'Write'",
 #"93:class_g = 'URxvt' && !_NET_WM_STATE@:32a",
 #"0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
